# aoc

./: .gitignore  Cargo.toml
2019/rust/: Cargo.toml
2019/rust/bench/: Dockerfile  build.sh
2019/rust/src/: main.rs
2019/rust/src/day01/: mod.rs  part1.test1.txt  part1.test2.txt  part1.test3.txt  part1.test4.txt  part2.test2.txt  part2.test3.txt
2019/rust/src/day02/: mod.rs
2019/rust/src/day03/: mod.rs  part1.test1.txt  part1.test2.txt  part2.test1.txt  part2.test2.txt
2019/rust/src/day04/: mod.rs
2019/rust/src/day05/: mod.rs
2019/rust/src/day06/: mod.rs
2019/rust/src/day07/: mod.rs
2019/rust/src/day08/: mod.rs
2019/rust/src/day09/: mod.rs
2019/rust/src/day10/: mod.rs
2019/rust/src/day11/: mod.rs
2019/rust/src/day12/: mod.rs
2019/rust/src/day13/: mod.rs
2019/rust/src/day14/: mod.rs  part1.test1.txt  part1.test2.txt  part1.test3.txt  part1.test4.txt  part2.test1.txt  part2.test2.txt  part2.test3.txt
2019/rust/src/lib/: mod.rs
2020/rust/: .gitignore  Cargo.toml
2020/rust/bench/: Dockerfile  build.sh
2020/rust/src/: main.rs
2020/rust/src/day01/: mod.rs  part1.test1.txt  part2.test1.txt
2020/rust/src/day02/: mod.rs  part1.test1.txt  part2.test1.txt
2020/rust/src/day03/: mod.rs  part1.test1.txt  part2.test1.txt
2020/rust/src/day04/: mod.rs  part1.test1.txt  part2.test1.txt  part2.test2.txt
2020/rust/src/day05/: mod.rs  part1.test1.txt  part1.test2.txt  part1.test3.txt  part1.test4.txt
2021/rust/: .dockerignore  .rustfmt.toml  Cargo.toml
2021/rust/bench/: Dockerfile  build.sh
2021/rust/src/: main.rs
day01/: index.js  (+1 more)
(+315 files in other folders)
