[package]
name = "aoc2019"
version = "0.0.0"
authors = ["Rasmus Rosengren <rasmus.rosengren@protonmail.com>"]
edition = "2021"

[dependencies]
aoc_macro = { git = "https://github.com/rosengrenen/aoc_macro" }
aoc_util = { git = "https://github.com/rosengrenen/aoc_util" }
num = "0.4"
permutohedron = "0.2"