[package]
name = "aoc2020-rust"
version = "0.1.0"
authors = ["Rasmus Rosengren <rasmus.rosengren@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
num-format = "0.4.0"
regex = "1.4.2"
reqwest = { version = "0.10.9", features = ["blocking"] }
