[package]
name = "aoc2020"
version = "0.0.0"
authors = ["Rasmus Rosengren <rasmus.rosengren@protonmail.com>"]
edition = "2021"

[dependencies]
aoc_macro = { git = "https://github.com/rosengrenen/aoc_boilerplate" }
aoc_util = { git = "https://github.com/rosengrenen/aoc_boilerplate" }
hashbrown = "0.11"
regex = "1.4"
