[package]
name = "aoc2021"
version = "0.0.0"
authors = ["Rasmus Rosengren <rasmus.rosengren@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_macro = { path = "../../shared/rust/aoc_macro" }
aoc_util = { path = "../../shared/rust/aoc_util" }
